add firebase add

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,29 @@
 
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
+$mdc-theme-primary: #1565c0; // primary color
+$mdc-theme-secondary: #388e3c; // secondary color
+
+@import "~@angular-mdc/theme/material";
+
+.ag-theme-balham .leave-days-warning {
+    background-color: sandybrown !important;
+}
+
+.good-works {
+    background-color: green !important;
+}
+
+
+.test-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.test-header {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 13px;
+    margin-bottom: 5px;
+}
