--- a/src/app/views/timesheet/timesheet.component.html
+++ b/src/app/views/timesheet/timesheet.component.html
@@ -1,11 +1,19 @@
 <div class="animated fadeIn">
   <ag-grid-angular
-    style="height: 450px;"
+    style="height: 430px;"
     class="ag-theme-balham"
     [rowData]="rowData"
     [columnDefs]="columnDefs"
     [enableRangeSelection]="true"
     [pagination]="true"
-    >
+    [animateRows]="true"
+    [paginationAutoPageSize]="false" 
+    [rowClassRules]="rowClassRules"
+  >
   </ag-grid-angular>
+  <button mdc-fab position='bottomRight' (click)="add()">
+    <mdc-icon>add</mdc-icon>
+  </button>
 </div>
+
+<!-- [paginationAutoPageSize]="true" will show datas of 13 in each page  -->
